# Pixel-Art-Drawing

./: CMakeLists.txt  CMakePresets.json  README.md
config/: config.json
src/: CMakeLists.txt  Canvas.cpp  Canvas.h  Config.cpp  Config.h  DialogPixelSetting.cpp  DialogPixelSetting.h  DialogPixelSetting.ui  GrayWhiteButton.cpp  GrayWhiteButton.h  ImagePixelParser.cpp  ImagePixelParser.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MyOpenGLWidget.cpp  MyOpenGLWidget.h  functions.cpp  functions.h  main.cpp  ui_DialogPixelSetting.h  ui_MainWindow.h
