cmake_minimum_required(VERSION 3.5)

project(Pixel-Art-Drawing)

# 设置各生成文件的目标路径
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib)
set(COMPILE_PDB_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/pdb)
set(COMPILE_PDB_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/pdb)

# 设置库寻址路径，默认加载程序所在目录下的库
set(CMAKE_BUILD_RPATH ".")

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(VERSION 0.1)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}/inc
)

if(WIN32)
    set(Qt5_DIR "D:/worksoft/qt/qt/5.12.11/msvc2017_64/lib/cmake/Qt5")
else()

endif()

# 使用 file(GLOB ...) 获取 config 目录下的所有文件
file(GLOB CONFIG_FILES ${CMAKE_SOURCE_DIR}/config/*)

# 将这些文件复制到应用程序的执行目录（bin目录）
file(COPY ${CONFIG_FILES} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG})
file(COPY ${CONFIG_FILES} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE})

add_subdirectory(src)
